--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,14 @@
+.floating-feedback-btn {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 1000; /* Ensure it's above other content */
+  border-radius: 50%; /* Makes the button round */
+  width: 50px;
+  height: 50px;
+  font-size: 24px; /* Adjust the icon size */
+}
+
 body {
   font-family: "Open Sans", sans-serif;
   color: #444444;
